fix: add gap for tablet view

--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -678,6 +678,7 @@ h1, h2, h3, h4, h5, h6 {
   display: grid;
   grid-template-columns: repeat(1, minmax(0, 1fr));
   align-items: center;
+  gap: 0.25rem;
   padding-top: 7rem;
 }
 
